<resources>
    <string name="app_name">ChatApp</string>

    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="need_new_account">Need New Account    ?</string>
    <string name="logout">Log out</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_user">All User</string>
    <string name="create_a_new_Account">Craete a New Account</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="setting_tv_display_name">Display Name</string>
    <string name="setting_tv_hi">Hi i am here using ChatApp</string>
    <string name="setting_change_status">Change Status</string>
    <string name="setting_change_Image">Change   Image</string>


    <string name="status_chnge_status">Change Status</string>
    <string name="your_status">your status</string>
    <string name="last_seen">Last Seen</string>
    <string name="status">Status</string>



    <string name="profile_send_friend_request">Send Friend Request</string>
    <string name="profile_canel_friend_request">Cancel Friend Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
