<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.gihan.chatapp.ui.SettingActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginLeft="100dp"

        android:layout_marginTop="70dp"
        android:src="@drawable/kk" />

    <TextView
        android:id="@+id/setting_tv_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:padding="10dp"
        android:text="@string/setting_tv_display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/setting_tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_tv_display_name"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/setting_tv_hi"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/setting_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_change_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/setting_change_status"
        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:id="@+id/setting_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@color/colorAccent"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/setting_change_Image"
        android:textColor="@color/white" />


</RelativeLayout>
