<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context="com.example.gihan.chatapp.ui.ProfileActivity">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:src="@drawable/llll"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/display_name"
        android:padding="10dp"
        android:shadowColor="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/profile_image"
        android:layout_alignRight="@+id/profile_btn_send_request"
        android:layout_alignEnd="@+id/profile_btn_send_request" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:hint="Current Status"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profile_total_frind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Totla Friend "
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_above="@+id/profile_btn_send_request"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/profile_btn_send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/profile_send_friend_request"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_above="@+id/profile_cancel_request"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/profile_cancel_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/profile_canel_friend_request"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />


</RelativeLayout>
